--- a/mustlecalendarproject/templates/month.html
+++ b/mustlecalendarproject/templates/month.html
@@ -1,35 +1,76 @@
-{%extends 'base.html'%}
-
+{% extends 'base.html' %}
 {% block content %}
-    <div align="center">
-        <a href="{% url 'app:month' month_previous.year month_previous.month %}">前月</a>
-        {{ month_current | date:"Y年m月" }}
-        <a href="{% url 'app:month' month_next.year month_next.month %}">次月</a>
-    </div>
-    <table class="table">
-        <thead>
-            <tr>
-                {% for w in weak_names %}
-                    <th>{{ w }}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-        {% for week in month_days %}
-            <tr>
-                {% for day in week %}
-                    {% if now == day %}
-                        <td class="table-success">
-                    {% else %}
-                        <td>
-                    {% endif %}
-                    {% if month_current.month == day.month %}
-                        {{ day.day }}
-                    {% endif %}
-                    </td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<style>
+  table {
+    table-layout: fixed;
+  }
+
+  td>div {
+    height: 100px;
+  }
+
+  li {
+    height: 16px;
+    font-size: 10px;
+    list-style-type: none;
+  }
+</style>
+
+<div align="center">
+  <a href="{% url 'app:month_with_schedule' month_previous.year month_previous.month %}">
+    前月
+  </a>
+  {{ month_current | date:"Y年m月" }}
+  <a href="{% url 'app:month_with_schedule' month_next.year month_next.month %}">
+    次月
+  </a>
+</div>
+
+<table class="table">
+  <thead>
+    <tr>
+      {% for w in week_names %}
+      <th>{{ w }}</th>
+      {% endfor %}
+    </tr>
+  </thead>
+
+  <tbody>
+    {% for day_schedules in month_day_schedules %}
+    <tr>
+      {% for day, schedules in day_schedules.items %}
+      {% if now == day %}
+      <td class="table-success">
+        {% else %}
+      <td>
+        {% endif %}
+        <div>
+          {% if month_current.month == day.month %}
+          {{ day.day }}
+
+          {% for schedule in schedules %}
+          <li>({{ schedule.get_place_display }})</li>
+          {% if schedule.category_pectoral == 'checked' %}
+          <li style="color:red">胸筋</li>
+          {% endif %}
+          {% if schedule.category_abs == 'checked' %}
+          <li style="color:blue">腹筋</li>
+          {% endif %}
+          {% if schedule.category_spine == 'checked' %}
+          <li style="color:green">背筋</li>
+          {% endif %}
+          {% if schedule.category_run == 'checked' %}
+          <li style="color:orange">ラン</li>
+          {% endif %}
+          {% endfor %}
+
+          {% endif %}
+        </div>
+      </td>
+
+      {% endfor %}
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
