#1 日付をカレンダーで登録できるように

--- a/mustlecalendarproject/templates/create.html
+++ b/mustlecalendarproject/templates/create.html
@@ -3,6 +3,7 @@
 
 <form action="" method='POST'>{%csrf_token%}
     {{form.as_p}}
+    {{ form.media }}
     <input type='submit' value='作成する'>
 </form>
 
