--- a/mustlecalendarproject/templates/update.html
+++ b/mustlecalendarproject/templates/update.html
@@ -3,8 +3,7 @@
 
 <form action="" method='POST'>{%csrf_token%}
     {{ form.as_p }}
-    {{ form.media }}
-    <input type='submit' value='作成する'>
+    <input type='submit' value='更新する'>
 </form>
 
 {% endblock %}
