--- a/mustlecalendarproject/templates/update.html
+++ b/mustlecalendarproject/templates/update.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <form action="" method='POST'>{%csrf_token%}
+    {{ object.date|date:"Y/m/d" }}
     {{ form.as_p }}
     <input type='submit' value='更新する'>
 </form>
