--- a/mustlecalendarproject/templates/detail.html
+++ b/mustlecalendarproject/templates/detail.html
@@ -18,4 +18,8 @@
 
 <a href="{% url 'app:update' object.pk %}" class="btn btn-primary">更新する</a>
 
+<form method="post" action="{% url 'app:delete' object.pk %}">{% csrf_token %}
+    <button class="btn btn-primary" type="submit" onclick='return confirm("本当に削除しますか？");'>削除する</button>
+</form>
+
 {% endblock %}
