#5 新規登録時にuserを追加できるように

--- a/mustlecalendarproject/templates/create.html
+++ b/mustlecalendarproject/templates/create.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 
+{% if user.is_authenticated %}
 <form action="" method='POST'>{%csrf_token%}
-    {{ form.as_p }}
+
+    {% for f in form %}
+    {% if f.name != 'user' %}
+    <p>{{ f.label }}</p>
+    <p>{{ f }}</p>
     {{ form.media }}
+    {% endif %}
+    {% endfor %}
+
+    <input type='hidden' name='user' value={{ user.id }}>
     <input type='submit' value='作成する'>
 </form>
+
+
+{% else %}
+ログインしてください
+<a href="{% url 'app:login' %}" class="btn btn-primary">ログイン</a>
+{% endif %}
 
 {% endblock %}
