--- a/mustlecalendarproject/templates/update.html
+++ b/mustlecalendarproject/templates/update.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
 
+{% if user.is_authenticated %}
+
 <form action="" method='POST'>{%csrf_token%}
     {{ object.date|date:"Y/m/d" }}
     {{ form.as_p }}
     <input type='submit' value='更新する'>
 </form>
+
+{% else %}
+ログインしてください
+<a href="{% url 'app:login' %}" class="btn btn-primary">ログイン</a>
+{% endif %}
 
 {% endblock %}
