#5 複合主キー制約を実装

--- a/mustlecalendarproject/templates/login.html
+++ b/mustlecalendarproject/templates/login.html
@@ -18,7 +18,9 @@
                 name="password_data" required>
             <label for="floatingPassword">パスワード</label>
         </div>
+        <a href={% url 'app:signup' %} type="submit">新規登録</a>
         <button class="w-100 btn btn-lg btn-primary" type="submit">ログイン</button>
+
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
     </form>
 </div>
