--- a/mustlecalendarproject/templates/signup.html
+++ b/mustlecalendarproject/templates/signup.html
@@ -18,7 +18,7 @@
                 name="password_data" required>
             <label for="floatingPassword">パスワード</label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">サインアップ</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">登録</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
     </form>
 </div>
