--- a/mustlecalendarproject/templates/base.html
+++ b/mustlecalendarproject/templates/base.html
@@ -13,7 +13,7 @@
   <title>筋トレカレンダー</title>
 </head>
 
-<body>
+<body class="text-center">
   {% load bootstrap4 %} {# import bootstrap4/bootstrap3 #}
   {% bootstrap_css %} {# Embed Bootstrap CSS #}
   {% bootstrap_javascript jquery='full' %} {# Embed Bootstrap JS+jQuery #}
