--- a/mustlecalendarproject/templates/month.html
+++ b/mustlecalendarproject/templates/month.html
@@ -21,7 +21,7 @@
 <a href="{% url 'app:create' %}" class="btn btn-primary">新規作成</a>
 <a href="{% url 'app:logout' %}" onclick='return confirm(" 本当にログアウトしますか?")' class="btn btn-primary">ログアウト</a>
 
-<div align="center">
+<div>
   <a href="{% url 'app:month_with_schedule' month_previous.year month_previous.month %}">
     前月
   </a>
