--- a/mustlecalendarproject/templates/signup.html
+++ b/mustlecalendarproject/templates/signup.html
@@ -1,26 +1,64 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container">
-    <form class="form-signin" method='post'>{% csrf_token %}
-        <h1 class="h3 mb-3 fw-normal">新規登録</h1>
-        {% if error %}
-        {{error}}
-        {% endif %}
+<style>
+    html,
+    body {
+        height: 100%;
+    }
 
-        <div class="form-floating">
-            <input type="text" class="form-control" id="floatingInput" placeholder="username" name="username_data" ,
-                required autofocus>
-            <label for="floatingInput">ユーザー名</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
-                name="password_data" required>
-            <label for="floatingPassword">パスワード</label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">登録</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-    </form>
-</div>
+    body {
+        display: flex;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+    }
+
+    .form-signin {
+        width: 100%;
+        max-width: 330px;
+        padding: 15px;
+        margin: auto;
+    }
+
+    .form-signin .form-floating:focus-within {
+        z-index: 2;
+    }
+
+    .form-signin input[type="text"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+
+    .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+</style>
+
+<form class="form-signin" method='post'>{% csrf_token %}
+    <h1 class="h3 mb-3 fw-normal">新規登録</h1>
+    {% if error %}
+    {{error}}
+    {% endif %}
+
+    <div class="form-floating">
+        <input type="text" class="form-control" id="floatingInput" placeholder="username" name="username_data" ,
+            required autofocus>
+        <label for="floatingInput">ユーザー名</label>
+    </div>
+    <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password_data"
+            required>
+        <label for="floatingPassword">パスワード</label>
+    </div>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">登録</button>
+    <a href={% url 'app:login' %} type="submit" style="margin-top:20px">ログイン</a>
+
+    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+</form>
 
 {% endblock %}
