--- a/mustlecalendarproject/templates/month.html
+++ b/mustlecalendarproject/templates/month.html
@@ -1,38 +1,57 @@
 {% extends 'base.html' %}
 {% block content %}
 <style>
-  table {
-    table-layout: fixed;
-  }
-
   td>div {
     height: 100px;
   }
 
-  li {
-    height: 16px;
+  li#category {
+    height: 14px;
     font-size: 10px;
     list-style-type: none;
+  }
+
+  .site-footer {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    justify-content: space-around;
+    background: gold;
+    height: 40px;
+    padding-top: 10px
+  }
+
+  .table {
+    table-layout: fixed;
+    margin-bottom: 3rem;
+  }
+
+  .table thead th {
+    position: sticky;
+    top: 0;
+    background: gold;
+  }
+
+  .create-button {
+    border-radius: 100%;
   }
 </style>
 
 {% if user.is_authenticated %}
 
-<a href="{% url 'app:create' %}" class="btn btn-primary">新規作成</a>
-<a href="{% url 'app:logout' %}" onclick='return confirm(" 本当にログアウトしますか?")' class="btn btn-primary">ログアウト</a>
-
-<div>
-  <a href="{% url 'app:month_with_schedule' month_previous.year month_previous.month %}">
-    前月
-  </a>
-  {{ month_current | date:"Y年m月" }}
-  <a href="{% url 'app:month_with_schedule' month_next.year month_next.month %}">
-    次月
-  </a>
-</div>
-
 <table class="table">
   <thead>
+    <tr>
+      <th colspan="7">
+        <li style="display: inline">
+          {{ month_current | date:"Y年m月" }}
+        </li>
+        <li style="display: inline">
+          <a href="{% url 'app:logout' %}" onclick='return confirm(" 本当にログアウトしますか?")'>ログアウト</a>
+        </li>
+      </th>
+    </tr>
     <tr>
       {% for w in week_names %}
       <th>{{ w }}</th>
@@ -45,9 +64,9 @@
     <tr>
       {% for day, schedule in day_schedule.items %}
       {% if now == day %}
-      <td class="table-success">
+      <td class="table-success" style="padding:0px">
         {% else %}
-      <td>
+      <td style="padding:0px">
         {% endif %}
         <div>
           {% if month_current.month == day.month %}
@@ -55,18 +74,18 @@
           <a href="{% url 'app:detail' schedule.id %}">
             {{ day.day }}
           </a>
-          <li>({{ schedule.get_place_display }})</li>
+          <li id="category">({{ schedule.get_place_display }})</li>
           {% if schedule.category_pectoral %}
-          <li style="color:red">胸筋</li>
+          <li id="category" style="color:red">胸筋</li>
           {% endif %}
           {% if schedule.category_abs %}
-          <li style="color:blue">腹筋</li>
+          <li id="category" style="color:blue">腹筋</li>
           {% endif %}
           {% if schedule.category_spine %}
-          <li style="color:green">背筋</li>
+          <li id="category" style="color:green">背筋</li>
           {% endif %}
           {% if schedule.category_run %}
-          <li style="color:orange">ラン</li>
+          <li id="category" style="color:orange">ラン</li>
           {% endif %}
           {% else %}
           {{ day.day }}
@@ -79,6 +98,22 @@
     {% endfor %}
   </tbody>
 </table>
+
+<footer class="site-footer">
+  <li style="display: inline">
+    <a href="{% url 'app:month_with_schedule' month_previous.year month_previous.month %}">
+      前月
+    </a>
+  </li>
+  <li style="display: inline">
+    <a href="{% url 'app:create' %}" class="gg-add" style="color:black"></a>
+  </li>
+  <li style="display: inline">
+    <a href="{% url 'app:month_with_schedule' month_next.year month_next.month %}">
+      次月
+    </a>
+  </li>
+</footer>
 
 {% else %}
 ログインしてください
