#2 month画面実装終了

--- a/mustlecalendarproject/templates/month.html
+++ b/mustlecalendarproject/templates/month.html
@@ -44,7 +44,7 @@
   <thead>
     <tr>
       <th colspan="7">
-        <li style="display: inline">
+        <li style="display: inline; padding-right: 70px">
           {{ month_current | date:"Y年m月" }}
         </li>
         <li style="display: inline">
