#2 ログアウト時のログイン画面の修正

--- a/mustlecalendarproject/templates/create.html
+++ b/mustlecalendarproject/templates/create.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<style>
+    .login {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px
+    }
+</style>
+
 {% if user.is_authenticated %}
 <form action="" method='POST'>{%csrf_token%}
 
@@ -18,8 +27,9 @@
 
 
 {% else %}
-ログインしてください
-<a href="{% url 'app:login' %}" class="btn btn-primary">ログイン</a>
+<div class="login">
+    <a href="{% url 'app:login' %}" class="btn btn-primary">ログイン</a>
+</div>
 {% endif %}
 
 {% endblock %}
