--- a/mustlecalendarproject/templates/create.html
+++ b/mustlecalendarproject/templates/create.html
@@ -54,7 +54,7 @@
     {% endfor %}
 
     <input type='hidden' name='user' value={{ user.id }}>
-    <input style="margin-top: 20px" type='submit' value='作成する'>
+    <input style="margin-top: 20px" type='submit' class="btn btn-primary" value='作成する'>
 </form>
 
 
