--- a/mustlecalendarproject/templates/create.html
+++ b/mustlecalendarproject/templates/create.html
@@ -53,6 +53,12 @@
     {% endif %}
     {% endfor %}
 
+    {% if messages %}
+    {% for m in messages %}
+    <div style="color:red; font-size: 13px">{{ m }}</div>
+    {% endfor %}
+    {% endif %}
+
     <input type='hidden' name='user' value={{ user.id }}>
     <input style="margin-top: 20px" type='submit' class="btn btn-primary" value='作成する'>
 </form>
